# datastreaming-benchmark

./: .clang-format  .flake8  .gitattributes  .gitignore  CMakeLists.txt  README.md  app.py  benchmark_scenarios.json  build instructions  build_images.bat  execute_experiments.py  new_requirements.txt  pyproject.toml  requirements.txt  setup_instructions.md
analyses/: messaging_stats.ipynb  resources_stats.ipynb
analyses/.ipynb_checkpoints/: messaging_stats-checkpoint.ipynb
analysis/: __init__.py  data_loader.py  metrics.py  visuals.py
core/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher
core/applications/: CMakeLists.txt  ConsumerApp.cpp  ConsumerApp.hpp  PublisherApp.cpp  PublisherApp.hpp
core/factory/: ConsumerFactory.cpp  ConsumerFactory.hpp  Factory.cpp  Factory.hpp  PublisherFactory.cpp  PublisherFactory.hpp
core/interfaces/: IConsumer.hpp  IPublisher.hpp
core/logger/: Logger.cpp  Logger.hpp
core/orchestrator/: benchmark_manager.py  container_manager.py  events_logger.py  metrics_collector.py  scenario_config_manager.py  scenario_manager.py  technology_manager.py
core/orchestrator/technologies/: arrowflight_bin_p2p_manager.py  arrowflight_p2p_manager.py  grpc_p2p_manager.py  kafka_cpp_manager.py  kafka_manager.py  kafka_p2p_manager.py  nats_jetstream_p2p_manager.py  nats_p2p_manager.py  rabbitmq_p2p_manager.py  zeromq_p2p_manager.py
core/orchestrator/utils/: logger.py
core/payload/: Payload.cpp  Payload.h  Payload.hpp
core/technology_loader/: TechnologyLoader.cpp  TechnologyLoader.hpp
core/tests/: CMakeLists.txt  LoggerTest.cpp  PayloadTest.cpp
core/utils/: Deserializer.hpp  Env.cpp  Env.hpp  RateLimiter.hpp  Utils.cpp  Utils.hpp
technologies/arrow_flight/: ArrowFlightConsumer.cpp  ArrowFlightConsumer.hpp  ArrowFlightPublisher.cpp  ArrowFlightPublisher.hpp  ArrowFlightRegistration.cpp  CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher
technologies/arrowflight_bin_p2p/: ArrowFlightConsumer.cpp  ArrowFlightConsumer.hpp  ArrowFlightPublisher.cpp  ArrowFlightPublisher.hpp  ArrowFlightRegistration.cpp  CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher
technologies/arrowflight_p2p/: ArrowFlightConsumer.cpp  ArrowFlightConsumer.hpp  ArrowFlightPublisher.cpp  ArrowFlightPublisher.hpp  ArrowFlightRegistration.cpp  CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher
technologies/grpc_p2p/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  GrpcConsumer.cpp  GrpcConsumer.hpp  GrpcPublisher.cpp  GrpcPublisher.hpp  GrpcRegistration.cpp  streaming.proto
technologies/kafka/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  KafkaConsumer.cpp  KafkaConsumer.hpp  KafkaPublisher.cpp  KafkaPublisher.hpp  KafkaRegistration.cpp
technologies/kafka_cpp/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  KafkaCallbacks.cpp  KafkaCallbacks.hpp  KafkaCppConsumer.cpp  KafkaCppConsumer.hpp  KafkaCppPublisher.cpp  KafkaCppPublisher.hpp  KafkaCppRegistration.cpp
technologies/kafka_p2p/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  KafkaCallbacks.cpp  KafkaCallbacks.hpp  KafkaCppConsumer.cpp  KafkaCppConsumer.hpp  KafkaCppPublisher.cpp  KafkaCppPublisher.hpp  KafkaCppRegistration.cpp  entrypoint_pub.sh  server.properties
technologies/nats_jetstream_p2p/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  NatsJetStreamConsumer.cpp  NatsJetStreamConsumer.hpp  NatsJetStreamPublisher.cpp  NatsJetStreamPublisher.hpp  NatsJetStreamRegistration.cpp  entrypoint_pub.sh  nats.config
technologies/nats_p2p/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  NatsConsumer.cpp  NatsConsumer.hpp  NatsPublisher.cpp  NatsPublisher.hpp  NatsRegistration.cpp  entrypoint_pub.sh  nats.config
technologies/rabbitmq_p2p/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  RabbitMQConsumer.cpp  RabbitMQConsumer.hpp  RabbitMQPublisher.cpp  RabbitMQPublisher.hpp  RabbitMQRegistration.cpp  entrypoint_pub.sh
technologies/zeromq_p2p/: CMakeLists.txt  Dockerfile.base  Dockerfile.consumer  Dockerfile.publisher  ZeroMQP2PConsumer.cpp  ZeroMQP2PConsumer.hpp  ZeroMQP2PPublisher.cpp  ZeroMQP2PPublisher.hpp  ZeroMQP2PRegistration.cpp
test_scenarios/: 1p1c1t_10MB-30s-demo.json
third_party_libs/: readerwriterqueue.h
third_party_libs/spsc_queue/: readerwriterqueue.h
